--- a/package.json
+++ b/package.json
@@ -12,16 +12,18 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/manuelbieh/geolib.git"
+    "url": "git+https://github.com/julian-okello/geolib.git"
   },
   "author": "Manuel Bieh",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/manuelbieh/geolib/issues"
+    "url": "https://github.com/julian-okello/geolib/issues"
   },
-  "homepage": "https://github.com/manuelbieh/geolib#readme",
+  "homepage": "https://github.com/julian-okello/geolib#readme",
   "scripts": {
     "babel": "babel",
+    "prepare": "npm run build",
+    "build": "webpack src/index.js lib/index.js",
     "build": "yarn clean && yarn build:es && yarn build:types && yarn build:umd",
     "build:es": "babel --minified --ignore **/*.test.js,**/*.test.ts --out-dir es --extensions .ts,.js --no-comments src",
     "build:types": "tsc --outDir es --emitDeclarationOnly --noEmit false --declaration",
