--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   "scripts": {
     "babel": "babel",
     "prepare" : "yarn run build",
-    "build": "yarn clean && yarn build:es && yarn build:types && yarn build:umd",
+    "build": "yarn clean && yarn build:es && yarn build:types && yarn build:umd && yarn run build",
     "build:es": "babel --minified --ignore **/*.test.js,**/*.test.ts --out-dir es --extensions .ts,.js --no-comments src",
     "build:types": "tsc --outDir es --emitDeclarationOnly --noEmit false --declaration",
     "build:umd": "webpack-cli --config webpack.config.js",
