--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "babel": "babel",
     "install": "npm run build",
     "build": "yarn clean && yarn build:es && yarn build:types && yarn build:umd",
-    "build:es": "babel --minified --ignore **/*.test.js,**/*.test.ts --out-dir es --extensions .ts,.js --no-comments src",
+    "build:es": "babel --minified --ignore **/*.test.js,**/*.test.ts --out-dir es --extensions .ts,.js --no-comments ./src",
     "build:types": "tsc --outDir es --emitDeclarationOnly --noEmit false --declaration",
     "build:umd": "webpack-cli --config webpack.config.js",
     "clean": "rimraf lib es",
